Создал один метод из основной логики и написал на него тест Начал писать логику update